--- a/src/components/FaqAccordion/FaqAccordion.css
+++ b/src/components/FaqAccordion/FaqAccordion.css
@@ -4,7 +4,7 @@
 }
 
 .faq__accordion-content .faq__accordion-text {
-  color: #29426c;
+  color: #0021a3;
   font-size: 18px;
 }
 
@@ -35,7 +35,7 @@
 .faq__accordion-lists_num li,
 .faq__accordion-lists_circle li {
   font-size: 16px;
-  color: #29426c;
+  color: #0021a3;
 }
 
 .faq__accordion-lists_num li span,
