--- a/src/components/HostingCard/HostingCard.css
+++ b/src/components/HostingCard/HostingCard.css
@@ -3,7 +3,7 @@
   background-color: #fff;
   border-radius: 16px;
   box-shadow: 0 1px 0.5px rgba(0, 0, 0, 0.1);
-  color: #345389;
+  color: #0021a3;
 }
 
 .hosting__features-card-img {
