--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -18,12 +18,8 @@
   display: flex;
   align-items: center;
   gap: 15px;
-  color: #300994;
+  color: #0021a3;
   transition: color 0.3s ease;
-}
-
-.footer__logo:hover {
-  color: #3c0bb9;
 }
 
 .footer__logo .footer__logo-text {
@@ -32,7 +28,7 @@
 }
 
 .footer__contacts-tel p {
-  color: #345389;
+  color: #0021a3;
   font-size: 14px;
   line-height: 14px;
   margin-bottom: 5px;
@@ -57,7 +53,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(67, 73, 121, 0.8);
+  background-color: rgba(0, 33, 163, 0.9);
   color: #fff;
   padding: 8px;
   border-radius: 16px;
@@ -65,7 +61,7 @@
 }
 
 .footer__contacts_lists a:hover {
-  background-color: rgba(67, 73, 121, 0.7);
+  background-color: rgba(0, 33, 163, 0.8);
 }
 
 .footer__clients,
@@ -83,7 +79,7 @@
 .footer__about h5 {
   font-weight: 600;
   font-size: 16px;
-  color: #29426c;
+  color: #0021a3;
 }
 
 .footer__clients a,
@@ -93,7 +89,7 @@
   font-size: 14px;
   line-height: 20px;
   font-weight: 400;
-  color: #29426c;
+  color: #0021a3;
   transition: all 0.3s ease;
 }
 
@@ -124,6 +120,10 @@
 }
 
 @media screen and (max-width: 400px) {
+  .footer__logo-text {
+    display: none;
+  }
+
   .footer__contacts {
     gap: 20px;
   }
