--- a/src/components/Hero/HeroCard.css
+++ b/src/components/Hero/HeroCard.css
@@ -12,7 +12,7 @@
 
 .hero__card-content {
   max-width: 380px;
-  color: #345389;
+  color: #0021a3;
 }
 
 .hero__card-content .hero__card-title {
@@ -52,13 +52,13 @@
   font-size: 16px;
   padding: 12px 32px;
   border-radius: 6px;
-  background-color: #345389;
+  background-image: linear-gradient(to right, #0021a3, #006eff);
   color: #fff;
   transition: all 0.3s ease;
 }
 
 .hero__card-btn:hover {
-  background-color: rgba(54, 95, 167, 0.9);
+  opacity: 0.9;
 }
 
 .hero__card-price {
@@ -66,7 +66,7 @@
   flex-direction: column;
   align-items: flex-end;
   text-align: right;
-  color: #345389;
+  color: #0021a3;
 }
 
 .hero__card-price span {
@@ -83,7 +83,7 @@
 
 .hero__card-img {
   position: absolute;
-  color: #345389;
+  color: #0021a3;
   opacity: 0.8;
   font-size: 100px;
   bottom: -40px;
