--- a/src/components/Navbar/NavbarLists.css
+++ b/src/components/Navbar/NavbarLists.css
@@ -22,7 +22,7 @@
   padding: 12px;
   border-radius: 10px;
   background-color: rgba(21, 21, 163, 0.1);
-  color: #300994;
+  color: #0021a3;
   transition: background-color 0.3s ease;
 }
 
@@ -48,13 +48,13 @@
 .navbar__list .navbar__list-text {
   font-size: 14px;
   line-height: 18px;
-  color: #300994;
+  color: #0021a3;
   font-weight: 500;
   transition: color 0.3s ease;
 }
 
 .navbar__list:hover .navbar__list-text {
-  color: #4911d6;
+  color: #021b7f;
 }
 
 .navbar__list.navbar__menu-item .navbar__list-text {
