--- a/src/components/Tariffs/Tariffs.css
+++ b/src/components/Tariffs/Tariffs.css
@@ -1,9 +1,7 @@
 .tariffs__intro-content {
-  max-width: 1000px;
   margin: 30px auto;
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
   gap: 20px;
 }
 
@@ -20,7 +18,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  background-color: #274068;
+  background-color: #0021a3;
   color: #fff;
   font-size: 20px;
   font-weight: 600;
@@ -28,7 +26,7 @@
 
 .tariffs__intro-content p {
   font-size: 15px;
-  color: #274068;
+  color: #0021a3;
 }
 
 .tariffs__tabs-wrapper {
@@ -64,12 +62,12 @@
 
 .customer-choice {
   position: relative;
-  border: 2px solid #3068c3;
+  border: 2px solid #0021a3;
   border-top: none;
 }
 
 .customer-choice .tariff__card-top {
-  border-top: 2px solid #3068c3;
+  border-top: 2px solid #0021a3;
 }
 
 .tariff__card-top {
@@ -93,7 +91,7 @@
   font-weight: 600;
   padding-left: 16px;
   padding-right: 16px;
-  background-color: #3068c3;
+  background-color: #0021a3;
   color: rgba(255, 255, 255, 0.9);
   border-bottom-left-radius: 16px;
   border-top-right-radius: 16px;
@@ -102,20 +100,20 @@
 .tariff__card-top .tariff__card-top_title {
   font-size: 20px;
   font-weight: 700;
-  color: #3068c3;
+  color: #0021a3;
 }
 
 .tariff__card-top .tariff__card-top_text {
   font-size: 14px;
   line-height: 120%;
-  color: #2f4e7f;
+  color: #0021a3;
   margin-top: 5px;
 }
 
 .tariff__card-prices {
   display: flex;
   align-items: center;
-  color: #274068;
+  color: #0021a3;
   gap: 10px;
   flex-wrap: wrap;
 }
@@ -154,10 +152,11 @@
   gap: 0 4px;
   font-size: 16px;
   flex-wrap: wrap;
+  color: #0021a3;
 }
 
 .tariff__card-lists p svg {
-  color: #3068c3;
+  color: #0021a3;
   font-size: 10px;
 }
 
@@ -168,6 +167,7 @@
   justify-content: space-between;
   gap: 10px;
   padding: 22px 22px 14px;
+  color: #0021a3;
 }
 
 .tariff__card-transfer h5 {
@@ -188,19 +188,20 @@
   width: 100%;
   font-size: 16px;
   font-weight: 600;
-  background-color: #274068;
+  background-image: linear-gradient(to right, #006eff, #0021a3);
   transition: all 0.3s ease;
   padding: 0 32px;
   height: 48px;
+  text-transform: initial;
 }
 
 .tariff__card-content button:hover,
 .tariff__card-transfer_wrapper button:hover {
-  background-color: #3068c3;
+  opacity: 0.8;
 }
 
 .customer-choice .tariff__card-content button {
-  background-color: #3068c3;
+  background-image: linear-gradient(to right, #0021a3, #006eff);
 }
 
 .customer-choice .tariff__card-content button:hover {
@@ -211,7 +212,7 @@
   font-size: 12px;
   text-align: center;
   padding-top: 16px;
-  color: #3068c3;
+  color: #0021a3;
   font-weight: 600;
 }
 
