--- a/src/components/Tariffs/TariffsCalculator.css
+++ b/src/components/Tariffs/TariffsCalculator.css
@@ -30,7 +30,7 @@
   font-weight: 600;
   padding-left: 16px;
   padding-right: 16px;
-  background-color: #3068c3;
+  background-color: #0021a3;
   color: rgba(255, 255, 255, 0.9);
   border-bottom-left-radius: 16px;
   border-top-right-radius: 16px;
@@ -40,13 +40,13 @@
   font-size: 12px;
   margin-bottom: 4px;
   font-weight: 600;
-  color: #3068c3;
+  color: #0021a3;
 }
 
 .tariffsCalculator__card-header .tariffsCalculator__card-monthly {
   font-size: 24px;
   font-weight: 700;
-  color: #274068;
+  color: #0021a3;
   margin-bottom: 4px;
 }
 
@@ -57,7 +57,7 @@
 .tariffsCalculator__card-header .tariffsCalculator__card-daily {
   font-size: 16px;
   font-weight: 700;
-  color: #274068;
+  color: #0021a3;
 }
 
 .tariffsCalculator__content {
@@ -77,7 +77,7 @@
 
 .tariffsCalculator__content > div .tariffsCalculator__content-text {
   font-size: 16px;
-  color: #274068;
+  color: #0021a3;
   opacity: 0.9;
   display: flex;
   align-items: center;
@@ -92,14 +92,10 @@
   color: #fff;
 }
 
-.tooltipjon {
-  border: 1px solid red;
-}
-
 .tariffsCalculator__content > div b {
   font-size: 18px;
   font-weight: 600;
-  color: #274068;
+  color: #0021a3;
 }
 
 .tariffsCalculator__content .tariffsCalculator__content-btn {
@@ -109,12 +105,13 @@
   line-height: 20px;
   font-weight: 600;
   border-radius: 6px;
-  background-color: #274068;
+  background-image: linear-gradient(to right, #006eff, #0021a3);
   transition: background-color 0.3s ease;
+  text-transform: initial;
 }
 
 .tariffsCalculator__content .tariffsCalculator__content-btn:hover {
-  background-color: #3068c3;
+  opacity: 0.8;
 }
 
 /* Tariffs Calculator */
@@ -187,6 +184,7 @@
   border-radius: 6px;
   background-color: #274068;
   transition: background-color 0.3s ease;
+  text-transform: initial;
 }
 
 .tariffsCalculator__content .tariffsCalculator__btn:hover {
